WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24059
Tokenizer::write() return value is never used
https://bugs.webkit.org/show_bug.cgi?id=24059
Summary
Tokenizer::write() return value is never used
Alexey Proskuryakov
Reported
2009-02-20 03:32:18 PST
So, let's make it a void. Patch forthcoming.
Attachments
proposed patch
(10.81 KB, patch)
2009-02-20 03:35 PST
,
Alexey Proskuryakov
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2009-02-20 03:35:18 PST
Created
attachment 27826
[details]
proposed patch
Alexey Proskuryakov
Comment 2
2009-02-23 00:45:21 PST
Committed revision 41130.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug