        Reviewed by Sam Weinig.

https://bugs.webkit.org/show_bug.cgi?id=24059
        Tokenizer::write() return value is never used

        * dom/Tokenizer.h:
        * dom/XMLTokenizer.cpp:
        (WebCore::XMLTokenizer::write):
        * dom/XMLTokenizer.h:
        * html/HTMLTokenizer.cpp:
        (WebCore::HTMLTokenizer::write):
        * html/HTMLTokenizer.h:
        * loader/FTPDirectoryDocument.cpp:
        (WebCore::FTPDirectoryTokenizer::write):
        * loader/ImageDocument.cpp:
        (WebCore::ImageTokenizer::write):
        * loader/MediaDocument.cpp:
        (WebCore::MediaTokenizer::write):
        * loader/PluginDocument.cpp:
        (WebCore::PluginTokenizer::write):
        * loader/TextDocument.cpp:
        (WebCore::TextTokenizer::write):
        Made write() return void, not bool.



Canonical link: https://commits.webkit.org/33212@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41130 268f45cc-cd09-0410-ab3c-d52691b4dbfc